objects/CES__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Engagement Scheduler</relationshipLabel>
        <relationshipName>R00N30000002D0E0EAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BreifingSite__c</fullName>
        <description>Primary location where the briefing takes place</description>
        <label>Primary Site</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BriefingNo__c</fullName>
        <description>CES event object primary key</description>
        <label>Briefing ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BriefingType__c</fullName>
        <description>CES Request  type</description>
        <label>Request Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Briefing_Status__c</fullName>
        <description>Request status</description>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>PM or scheduler name depending on the request status</description>
        <label>Assigned Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <description>Contact number for the contact name</description>
        <label>Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End date for the request</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <description>Reason for return for returned requests</description>
        <label>Return Reason</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start date for request</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <description>This object will store summary level briefing information from CES. This Object is created to Integrate CES Applicaiton data with Salesforce.com. It allows users to link CES Briefings with Accounts in Salesforce.com.</description>
    <label>zzCustomer Engagement Scheduler</label>
    <nameField>
        <label>Request ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Engagement Scheduler</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>